# atcoder-pypy-runtime-environment

./: .python-version  Dockerfile  Dockerfile.original  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose-dev.yaml  docker-compose-prebuilt.yaml  docker-compose.yaml
docker/: Dockerfile  Dockerfile.original  Dockerfile.original-slim  README.md
setting/: .atcodertools.toml
src/atcoder_pypy_runtime_environment/: __init__.py
