[project]
name = "atcoder-pypy-runtime-environment"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "mo124121", email = "101929016+mo124121@users.noreply.github.com" }
]
dependencies = [
    "ac-library-python @ git+https://github.com/not522/ac-library-python@58f324e",
    "numpy==1.24.1",
    "scipy==1.10.1",
    "networkx==3.0",
    "sympy==1.11.1",
    "sortedcontainers==2.4.0",
    "more-itertools==9.0.0",
    "shapely==2.0.0",
    "bitarray==2.6.2",
    "PuLP==2.7.0",
    "mpmath==1.2.1",
    "pandas==1.5.2",
    "z3-solver==4.12.1.0",
    "scikit-learn==1.3.0",
    "cppyy==2.4.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.9.1",
    "ipykernel>=6.25.2",
    "autopep8>=2.0.4",
    "atcoder-tools>=2.13.0",
    "online-judge-tools>=11.5.1",
    "markupsafe==2.0.1",
]



[tool.hatch.metadata]
allow-direct-references = true
